<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/backgroundColor"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/sign_up_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/sign_up_signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="@string/signUp"
        android:textSize="@dimen/_20sdp" />

    <LinearLayout
        android:id="@+id/sign_up_Form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_signUpText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/sign_up_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_45sdp"
            android:layout_marginRight="@dimen/_45sdp"
            android:hint="@string/name"
            android:padding="@dimen/_3sdp"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/_12sdp"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/_5sdp"
            android:singleLine="true"
            android:background="@drawable/border_bottom"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_45sdp"
            android:layout_marginRight="@dimen/_45sdp"
            android:hint="@string/email"
            android:padding="@dimen/_3sdp"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/_12sdp"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/_5sdp"
            android:singleLine="true"
            android:background="@drawable/border_bottom"
            android:textColor="@color/colorPrimaryDark" />


            <EditText
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_45sdp"
                android:layout_marginRight="@dimen/_45sdp"
                android:hint="@string/height"
                android:padding="@dimen/_3sdp"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="@dimen/_12sdp"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/_5sdp"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:background="@drawable/border_bottom"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/weight"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_45sdp"
                android:layout_marginRight="@dimen/_45sdp"
                android:hint="@string/weight"
                android:padding="@dimen/_3sdp"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="@dimen/_12sdp"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/_5sdp"
                android:singleLine="true"
                android:background="@drawable/border_bottom"
                android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_45sdp"
            android:layout_marginRight="@dimen/_45sdp"
            android:hint="@string/date"
            android:padding="@dimen/_3sdp"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/_12sdp"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/_5sdp"
            android:singleLine="true"
            android:background="@drawable/border_bottom"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_45sdp"
            android:layout_marginRight="@dimen/_45sdp"
            android:hint="@string/gender"
            android:padding="@dimen/_3sdp"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/_12sdp"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/_5sdp"
            android:singleLine="true"
            android:background="@drawable/border_bottom"
            android:textColor="@color/colorPrimaryDark" />



        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textCursorDrawable="@drawable/cursor"
            android:layout_marginLeft="@dimen/_45sdp"
            android:layout_marginRight="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:singleLine="true"
            android:hint="@string/password"
            android:password="true"
            android:textSize="@dimen/_12sdp"
            android:padding="@dimen/_3sdp"
            android:textAlignment="center"
            android:background="@drawable/border_bottom"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_80sdp"
            android:layout_marginRight="@dimen/_80sdp"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:text="@string/signUpText"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorText"/>

    </LinearLayout>

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_Form"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_11sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark" />

</RelativeLayout>